Admin Header UI & Login page checkbox alignment fixed

--- a/web-app/css/highdpi.css
+++ b/web-app/css/highdpi.css
@@ -420,8 +420,8 @@ div.selector {
 .checker span input {
   margin: 0 !important; }
 
-.radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
-  margin: 0 !important; }
+/* .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] { */
+/*   margin: 0 !important; } */
 
 .radio-inline, .checkbox-inline {
   cursor: default; }
